--- a/practice/lw_01/lw_01.md
+++ b/practice/lw_01/lw_01.md
@@ -2,3 +2,40 @@
 ## Установка и настройка ETL-инструмента. Создание конвейеров данных
 
 **Вариант №6 — Маркетинг: анализ эффективности рекламных кампаний**
+
+*Цель работы:* изучить основные принципы работы с ETL-инструментами на примере **Pentaho Data Integration (PDI)**:  
+настроить среду выполнения, создать конвейер обработки данных (очистка, фильтрация, преобразование) и загрузить результаты в базу данных **MySQL**.
+### Описание входных данных
+Использован датасет маркетинговых кампаний (CSV-файл), содержащий информацию об эффективности рекламы. Ссылка на датасет: https://www.kaggle.com/datasets/rodsaldanha/arketing-campaign
+
+
+| Поле | Описание |
+|------|----------|
+| ID | Уникальный идентификатор клиента |
+| Year_Birth | Год рождения клиента |
+| Education | Уровень образования |
+| Marital_Status | Семейное положение |
+| Income | Годовой доход семьи |
+| Kidhome | Количество маленьких детей |
+| Teenhome | Количество подростков |
+| Dt_Customer | Дата регистрации клиента |
+| Recency | Дней с последней покупки |
+| MntWines | Расходы на вино (2 года) |
+| MntFruits | Расходы на фрукты |
+| MntMeatProducts | Расходы на мясные продукты |
+| MntFishProducts | Расходы на рыбу |
+| MntSweetProducts | Расходы на сладости |
+| MntGoldProds | Расходы на золотые товары |
+| NumDealsPurchases | Покупки со скидкой |
+| NumWebPurchases | Онлайн-покупки |
+| NumCatalogPurchases | Покупки по каталогу |
+| NumStorePurchases | Покупки в магазине |
+| NumWebVisitsMonth | Посещения сайта за месяц |
+| AcceptedCmp1–5 | Принятие предложения в кампаниях 1–5 |
+| Complain | Жалобы за последние 2 года |
+| Z_CostContact | Стоимость контакта |
+| Z_Revenue | Доход |
+| Response | Принятие предложения в последней кампании |
+
+---
+
