--- a/practice/lw_01/lw_01.md
+++ b/practice/lw_01/lw_01.md
@@ -8,6 +8,7 @@
 ### Описание входных данных
 Использован датасет маркетинговых кампаний (CSV-файл), содержащий информацию об эффективности рекламы. Ссылка на датасет: https://www.kaggle.com/datasets/rodsaldanha/arketing-campaign
 
+Добавлены [данные](/practice/lw_01/marketing_20000_rows.csv) для увеличения количества строк - до 20 000 записей
 
 | Поле | Описание |
 |------|----------|
