--- a/practice/lw_01/lw_01.md
+++ b/practice/lw_01/lw_01.md
@@ -39,4 +39,50 @@
 | Response | Принятие предложения в последней кампании |
 
 ---
+## Запуск Pentaho Spoon
+![Запуск Pentaho Spoon](img/img01.png)
 
+## Скриншот конвейера в Spoon
+![Общий вид](img/img02.png)
+
+###  Ключевые шаги
+
+**CSV File Input**  
+![Настройки CSV File Input](img/img03.png)
+
+**Calculator**  
+![Calculator](img/img04.png)
+
+**Formula**  
+![Formula](img/img05.png)
+
+**Group by**  
+![Group by](img/img06.png)
+
+**Table Output - подключение к БД**  
+![Настройки Table Output](img/img07.png)
+
+---
+### SQL-запросы для проверки загрузки данных 
+```sql
+SELECT COUNT(*) AS total_segments
+FROM customer_segment_summary;
+```
+![sql1](img/sql1.png)
+```sql
+SELECT *
+FROM customer_segment_summary
+LIMIT 10;
+
+```
+![sql2](img/sql2.png)
+```sql
+SELECT income_group, SUM(customers) AS total_clients
+FROM customer_segment_summary
+GROUP BY income_group;
+
+
+```
+![sql3](img/sql3.png)
+
+### [Файл трансформации](/lw_01/lab_01.ktr)
