--- a/practice/lw_01/lw_01.md
+++ b/practice/lw_01/lw_01.md
@@ -86,3 +86,6 @@ GROUP BY income_group;
 ***
 
 ### [Файл трансформации](/lw_01/lab_01.ktr)
+
+### Выводы
+В ходе работы была настроена среда для выполнения ETL-процессов и успешно запущен Pentaho Data Integration. Создана трансформация, реализующая полный цикл обработки данных: чтение CSV-файла, очистка и преобразование данных, загрузка результатов в MySQL. Корректность загрузки подтверждена SQL-запросами. Цель лабораторной работы достигнута.
