--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -15,10 +15,26 @@
 - выполнение аналитических задач
 
 
-## Добавки в трансформацию
+## Дополнения в трансформацию
 
 - **Filter Rows**  
   ![Filter Row](img/img1.png)
+
+## Job
+![Фото работы](img/img8.png)
+![Файл работы]()
+
+## Transformation
+Трасформация 1 - orders
+![Фото трансформации 1](img/img9.png)
+![Файл траснформации]()
+Трасформация 2 - customers
+![Фото трансформации 2](img/img10.png)
+![Файл траснформации]()
+Трасформация 2 - products
+![Фото трансформации 3](img/img11.png)
+![Файл траснформации]()
+
   ## SQL-запросы проверки данных
 
 ```sql
@@ -26,16 +42,20 @@
 SELECT COUNT(*) FROM orders;
 SELECT COUNT(*) FROM customers;
 SELECT COUNT(*) FROM products;
-
+```
+![SQL1](img/img5.png)
+```sql
 -- Примеры данных
 SELECT * FROM orders LIMIT 5;
 SELECT * FROM customers LIMIT 5;
 SELECT * FROM products LIMIT 5;
-
+```
+![SQL2](img/img6.png)
+```sql
 -- Проверка фильтра Profit > 0
 SELECT COUNT(*) FROM orders WHERE profit <= 0;
 ```
-
+![SQL3(img/img7.png)
 
 ## Дополнительный анализ в Colab (Python)
 
