--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -28,10 +28,12 @@
 Трасформация 1 - orders
 ![Фото трансформации 1](img/img9.png)
 ![Файл траснформации]()
+
 Трасформация 2 - customers
 ![Фото трансформации 2](img/img10.png)
 ![Файл траснформации]()
-Трасформация 2 - products
+
+Трасформация 3 - products
 ![Фото трансформации 3](img/img11.png)
 ![Файл траснформации]()
 
@@ -55,11 +57,21 @@ SELECT * FROM products LIMIT 5;
 -- Проверка фильтра Profit > 0
 SELECT COUNT(*) FROM orders WHERE profit <= 0;
 ```
-![SQL3(img/img7.png)
+![SQL3](img/img7.png)
+
+Дополнительное задание 1 — Анализ по категориям товаров
+
+Для выполнения аналитической задачи была реализована отдельная трансформация [Task1.ktr](Task1.ktr).
+![Task1](img/img12.png)
+
+Дополнительное задание 2 — Анализ способов доставки
+
+Для анализа эффективности способов доставки была создана трансформация [Task2.ktr](Task2.ktr).
+![Task1](img/img13.png)
 
 ## Дополнительный анализ в Colab (Python)
 
-Для анализа данных после ETL использовался Google Colab.  
+Для визуализации данных после ETL использовался Google Colab.  
 - **Подключение**  
   ![Подключение](img/img2.png)
   - **Задание 1**  
