--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -41,9 +41,11 @@
 
 ```sql
 -- Количество строк в таблицах
-SELECT COUNT(*) FROM orders;
-SELECT COUNT(*) FROM customers;
-SELECT COUNT(*) FROM products;
+SELECT 'orders' AS table_name, COUNT(*) AS row_count FROM orders
+UNION ALL
+SELECT 'customers', COUNT(*) FROM customers
+UNION ALL
+SELECT 'products', COUNT(*) FROM products;
 ```
 ![SQL1](img/img5.png)
 ```sql
