--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -22,20 +22,20 @@
 
 ## Job
 ![Фото работы](img/img8.png)
-![Файл работы]()
+![Файл работы](Job.kjb)
 
 ## Transformation
 Трасформация 1 - orders
 ![Фото трансформации 1](img/img9.png)
-![Файл траснформации]()
+![Файл траснформации](lab_02_1_orders.ktr)
 
 Трасформация 2 - customers
 ![Фото трансформации 2](img/img10.png)
-![Файл траснформации]()
+![Файл траснформации](lab_02_2_csv_to_Customers.ktr)
 
 Трасформация 3 - products
 ![Фото трансформации 3](img/img11.png)
-![Файл траснформации]()
+![Файл траснформации](lab_02_3_csv_to_products.ktr)
 
   ## SQL-запросы проверки данных
 
