--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -73,7 +73,7 @@ SELECT COUNT(*) FROM orders WHERE profit <= 0;
 
 ## Дополнительный анализ в Colab (Python)
 
-Для визуализации данных после ETL использовался Google Colab.  
+Для визуализации данных после ETL использовался [Google Colab](ETL_lab2.ktr) 
 - **Подключение**  
   ![Подключение](img/img2.png)
   - **Задание 1**  
