--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -27,14 +27,17 @@
 ## Transformation
 Трасформация 1 - orders
 ![Фото трансформации 1](img/img9.png)
+
 [Файл траснформации](lab_02_1_orders.ktr)
 
 Трасформация 2 - customers
 ![Фото трансформации 2](img/img10.png)
+
 [Файл траснформации](lab_02_2_csv_to_Customers.ktr)
 
 Трасформация 3 - products
 ![Фото трансформации 3](img/img11.png)
+
 [Файл траснформации](lab_02_3_csv_to_products.ktr)
 
   ## SQL-запросы проверки данных
@@ -74,12 +77,14 @@ SELECT COUNT(*) FROM orders WHERE profit <= 0;
 ## Дополнительный анализ в Colab (Python)
 
 Для визуализации данных после ETL использовался [Google Colab](ETL_lab2.ktr) 
-- **Подключение**  
+### Подключение
   ![Подключение](img/img2.png)
-  - **Задание 1**  
+  
+### Задание 1  
   ![Задание 1](img/img3.png)
-  - **Задание 2**  
+  
+### Задание 2  
   ![Задание 2](img/img4.png)
 
-### Выводы
+## Выводы
 В ходе лабораторной работы 2.1 была реализована полная цепочка ETL-процесса: выполнена динамическая загрузка CSV-файла по HTTP, нормализация данных и разделение на три таблицы (orders, customers, products), реализована дедупликация и обработка ошибок с использованием Pentaho Data Integration. Для индивидуального варианта 6 были применены фильтры по прибыли (Profit > 0), а также выполнены аналитические задания: построен отчет по категориям товаров и анализ способов доставки с визуализацией результатов в Colab с использованием Python. Работа позволила закрепить навыки настройки динамических соединений, обработки данных, агрегаций и построения аналитических отчетов на основе нормализованной базы данных.
