--- a/practice/lw_02/lw_02.md
+++ b/practice/lw_02/lw_02.md
@@ -4,8 +4,8 @@
 **Вариант №6**
 | Основной фильтр для загрузки в БД | Доп. задание 1 (Аналитика) | Доп. задание 2 (Аналитика) |
 |------|----------|----------|
-| Скидка: Discount > 0 | Анализ по сегментам | Отчет по возвратам |
-
+| Прибыль: Profit > 0 | Отчет по категориям | 	Анализ доставки |
+	
 
 *Цель работы:* получить практические навыки создания ETL-процесса в Pentaho Data Integration, включающего:
 - динамическую загрузку CSV по HTTP
